# rag_ui

./: .env.example  .gitignore  DATABASE_INIT_GUIDE.md  DIFY_APP_SETUP_GUIDE.md  ENVIRONMENT_VARIABLES.md  LOGIN_README.md  NVM_GUIDE.md  PROJECT_STATUS.md  PROJECT_UPDATES.md  QUICKSTART.md  README.md  SOLUTION_SUMMARY.md  SWAGGER_DOCS_GUIDE.md  TEST_DOCUMENTATION.md  TEST_EXECUTION_REPORT.md  USER_AUTH_GUIDE.md  VOLTA_GUIDE.md  cleanup.sh  correct_api_usage.py  create_admin.py  create_admin_simple.py  create_dify_app.py  debug_empty_body.py  docker-compose.dev.yml  docker-compose.yml  fix-and-start.sh  fix-frontend.sh  package-lock.json  package.json  start-dev.sh  start-with-auth.sh  start.sh  test-auth.sh  test_all_functions.py  test_auth_api.py  test_chat_app_debug.py  test_chat_functionality.py  test_db_init.py  test_dify_api.py  test_dify_detailed_logging.py  (+3 more)
backend/: Dockerfile  STARTUP_GUIDE.md  init_db.py  pyproject.toml  quick_start.sh  run_tests.sh  start_backend.sh  start_fixed.sh  test_db.py  test_db_connection.py
backend/app/: api.py  api_backup.py  api_complex.py  api_docs.py  api_enhanced.py  api_models.py  api_new.py  auth.py  auth_old.py  config.py  database.py  database_api.py  database_endpoints.py  main.py  models.py  schemas.py  swagger_config.py
backend/tests/: test_api.py  test_api_new.py  test_comprehensive_api.py  test_database_models.py  test_performance.py
docs/: API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  PROJECT_OVERVIEW.md  README.md  generate_summary.sh
frontend/: .env.example  .umirc.ts  Dockerfile  nginx.conf  (+4 more)
(+17 files in other folders)
